# cuik-molmaker

./: .bumpversion.cfg  .gitignore  CMakeLists.txt  README.md  setup.cfg  setup.py
LICENSE/: third-party.txt
docs/: BUILD.md  FEATURES.md  TESTING.md  USAGE.md
scripts/: check_and_install_cuik_molmaker.py
src/: __init__.py  cuik_molmaker_cpp.cpp  export.h  features.cpp  features.h  mol_features.py  one_hot.cpp  one_hot.h  reaction_features.cpp
tests/cpp/catch2/: test_features.cpp
tests/data/: README.md  gen_reaction_refs.py  sample_rxns_100.csv  sample_rxns_100_ORGANIC_PROD_DIFF_BALANCE_ref.xz  sample_rxns_100_ORGANIC_PROD_DIFF_ref.xz  sample_rxns_100_ORGANIC_REAC_DIFF_BALANCE_ref.xz  sample_rxns_100_ORGANIC_REAC_DIFF_ref.xz  sample_rxns_100_ORGANIC_REAC_PROD_BALANCE_ref.xz  sample_rxns_100_ORGANIC_REAC_PROD_ref.xz  sample_rxns_100_RIGR_PROD_DIFF_BALANCE_ref.xz  sample_rxns_100_RIGR_PROD_DIFF_ref.xz  sample_rxns_100_RIGR_REAC_DIFF_BALANCE_ref.xz  sample_rxns_100_RIGR_REAC_DIFF_ref.xz  sample_rxns_100_RIGR_REAC_PROD_BALANCE_ref.xz  sample_rxns_100_RIGR_REAC_PROD_ref.xz  sample_rxns_100_V1_PROD_DIFF_BALANCE_ref.xz  sample_rxns_100_V1_PROD_DIFF_ref.xz  sample_rxns_100_V1_REAC_DIFF_BALANCE_ref.xz  sample_rxns_100_V1_REAC_DIFF_ref.xz  sample_rxns_100_V1_REAC_PROD_BALANCE_ref.xz  sample_rxns_100_V1_REAC_PROD_ref.xz  sample_rxns_100_V2_PROD_DIFF_BALANCE_ref.xz  sample_rxns_100_V2_PROD_DIFF_ref.xz  sample_rxns_100_V2_REAC_DIFF_BALANCE_ref.xz  sample_rxns_100_V2_REAC_DIFF_ref.xz  sample_rxns_100_V2_REAC_PROD_BALANCE_ref.xz  sample_rxns_100_V2_REAC_PROD_ref.xz  sample_smiles_100_batch_ORGANIC_ref.xz  sample_smiles_100_batch_V1_ref.xz  sample_smiles_100_batch_V2_ref.xz
tests/python/: test_atom_map_order.py  test_features.py  test_featurize_dims.py  test_fit_distribution.py  test_float_features.py  test_mol_features.py  test_parse_options.py  test_reaction_features.py
